@@ -156,6 +156,7 @@ Erik de Bueger
 Dick Bulterman
 Bill Bumgarner
 Jimmy Burgett
+Edmond Burnett
 Tommy Burnette
 Roger Burnham
 Alastair Burt
